resources/assets/sass/base/_base.scss
/* Base Styles */
body {
	overflow-x: hidden;
	background: $white;
}

a:link, a:visited {
	text-decoration: none;
	color: $orange;
}

.main-container {
	width: $max-width;
	max-width: 100%;
	padding: 0px 20px;
	margin: 20px auto;
	position: relative;
}

h3 {
	font-size: 2em;
	font-family: $alt-header-font;
	font-weight: 800;
	color: $teal;
	margin-bottom: 25px;
}

p {
	color: $grey;
}

